@@ -1,4 +1,7 @@
-29 August 2016: Ralph
+1 September 2016: Wouter
+	- RFC 7958 is now out, updated docs for unbound-anchor.
+
+29 August 2016: Wouter
 	- Fix #777: OpenSSL 1.1.0 compatibility, patch from Sebastian A.
 	  Siewior.
 	- Add default root hints for IPv6 E.ROOT-SERVERS.NET, 2001:500:a8::e.
